<resources>
    <string name="app_name">COVID Tracker</string>
    <string name="string_questionFive">Do you feel any shortness of breath?</string>
    <string name="string_questionTwo">Have you been coughing alot throughout the day?</string>
    <string name="string_questionThree">Do you have a runny nose?</string>
    <string name="string_questionFour">Do you feel shivers or are sweating?</string>
    <string name="string_noOne">No</string>
    <string name="string_title">Covid Tracker</string>
    <string name="string_questionOne">Is your temperature 100.4 or above?</string>
    <string name="button_submit">Submit</string>
    <string name="string_name">Name</string>
    <string name="yesFive">Yes</string>
    <string name="noFive">No</string>
    <string name="yesFour">Yes</string>
    <string name="noFour">No</string>
    <string name="yesThree">Yes</string>
    <string name="noThree">No</string>
    <string name="yesTwo">Yes</string>
    <string name="noTwo">No</string>
    <string name="yesOne">Yes</string>
    <string name="string_questionFourr">Have you been coughing today?</string>
    <string name="bonusYesFour">Yes</string>
    <string name="bonusNoFour">No</string>
    <string name="bonusYesThree">Yes</string>
    <string name="bonusNoThree">No</string>
    <string name="bonusYesTwo">Yes</string>
    <string name="bonusNoTwo">No</string>
    <string name="bonusQOne">Are you excited for school?</string>
    <string name="bonusQFour">Do you like your teachers?</string>
    <string name="bonusQTwo">Do you have your mask?</string>
    <string name="bonusQThree">Is your first period fun?</string>
    <string name="bonusTitle">Bonus Round</string>
    <string name="bonusYesOne">Yes</string>
    <string name="bonusNoOne">No</string>
</resources>